# metamuse

./: .gitignore  README.md  test_request.json  update_curated_avatars.rs  upload_avatars.js
ai-agent/: Cargo.toml
ai-agent/src/: main.rs
contracts/: deploy-contracts.sh  foundry.toml
contracts/script/: DeployHyperion.s.sol
contracts/src/: CommitmentVerifier.sol  ICommitmentVerifier.sol  InteractionDAT.sol  MetaMuse.sol  MuseMemory.sol  MusePlugins.sol  MuseRating.sol  TrainingDataDAT.sol
metamuse-api/: .env.example  .gitignore  Cargo.toml
metamuse-api/src/: agent_workflow.rs  ai_worker.rs  avatar_system.rs  blockchain_client.rs  config.rs  cot_personality.rs  ipfs_chat_history.rs  llama_engine_wrapper.rs  main.rs  memory_routes_enhanced.rs  muse_orchestrator.rs  persist_memory.rs  plugin_system.rs  rating_system.rs  route.rs  semantic_search.rs  tee_attestation.rs  template_system.rs  tools.rs  training_data_market.rs  verification.rs
metamuse-web/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
metamuse-web/src/app/: layout.tsx  page.tsx
metamuse-web/src/app/chat/[museId]/: page.tsx
metamuse-web/src/app/create/: page.tsx
metamuse-web/src/app/dats/: page.tsx
metamuse-web/src/app/demo/: page.tsx
metamuse-web/src/app/explore/: page.tsx
metamuse-web/src/app/gallery/: page.tsx
metamuse-web/src/app/muse/[museId]/: page.tsx
metamuse-web/src/app/navbar-test/: page.tsx
metamuse-web/src/app/training/: page.tsx
metamuse-web/src/app/training/contribute/: page.tsx
metamuse-web/src/app/training/validate/: page.tsx
metamuse-web/src/components/avatars/: AvatarSelector.tsx  AvatarUploader.tsx  MuseAvatar.tsx  index.ts
metamuse-web/src/components/brand/: AIConsciousnessFramework.tsx  BrandIdentity.tsx  BrandPatterns.tsx  ConsciousnessVisuals.tsx  VisualMetaphors.tsx  index.ts
metamuse-web/src/components/chat/: index.ts
metamuse-web/src/components/chat/bubbles/: PersonalityChatBubble.tsx
metamuse-web/src/components/chat/dat/: DATMintingPanel.tsx
metamuse-web/src/components/icons/: FeatureIcon.tsx  NavigationIcon.tsx  PersonalityIcon.tsx  StatusIcon.tsx  TraitIcon.tsx  index.ts
metamuse-web/src/components/layout/: Navbar.tsx
metamuse-web/src/components/memory/: PolyMemoryViewer.tsx
metamuse-web/src/components/templates/: TemplateBuilder.tsx  TemplateCustomizer.tsx  TemplateSelector.tsx
metamuse-web/src/components/training/: MarketplaceStats.tsx  TrainingDataContribution.tsx  TrainingDataValidation.tsx
metamuse-web/src/components/ui/: MusePreview.tsx  PersonalitySlider.tsx  TransactionResultModal.tsx  TransactionStatus.tsx
metamuse-web/src/components/ui/themed/: index.ts  (+1 more)
metamuse-web/src/config/: wagmi.ts
metamuse-web/src/constants/: index.ts
metamuse-web/src/hook/: useChat.ts  useEnhancedMemory.ts  useMetaMuse.ts  useMuseData.ts  useStateSync.ts
metamuse-web/src/hooks/: usePersonalityTheme.ts
metamuse-web/src/lib/: api-memory-enhanced.ts  api.ts
metamuse-web/src/providers/: Web3Provider.tsx
metamuse-web/src/types/: index.ts
metamuse-web/src/utils/: personalityColors.ts
(+6 files in other folders)
