[package]
name = "metamuse-api"
version = "0.1.0"
edition = "2021"

[dependencies]
alith = { git = "https://github.com/0xLazAI/alith", version = "0.11.0", features = ["ipfs"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
dotenv = "0.15.0"
ethers = { version = "2.0", features = ["abigen", "rustls"] }
hex = "0.4"
md5 = "0.7"
schemars = "1.0.4"
secp256k1 = { version = "0.28", features = ["recovery", "rand-std"] }
serde = "1.0.219"
serde_json = "1.0"
sha3 = "0.10"
thiserror = "2.0.12"
tokio = "1.47.1"
tower-http = { version = "0.6.6", features = ["cors"] }
url = "2.5"
