[package]
name = "metamuse-api"
version = "0.1.0"
edition = "2021"

[dependencies]
alith = { git = "https://github.com/0xLazAI/alith", version = "0.11.0", features = ["ipfs", "llamacpp", "marlin"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
ethers = { version = "2.0", features = ["abigen", "rustls"] }
hex = "0.4"
md5 = "0.7"
reqwest = { version = "0.11", features = ["json", "multipart"] }
schemars = { version = "0.8.22", features = ["derive"] }
secp256k1 = { version = "0.28", features = ["recovery", "rand-std"] }
serde = "1.0.219"
serde_json = "1.0"
sha256 = "1.0"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "2.0.12"
tokio = "1.47.1"
tower-http = { version = "0.6.6", features = ["cors"] }
url = "2.5"
llama-cpp-2 = { version = "0.1", features = ["metal"] }
encoding_rs = "0.8"
uuid = { version = "1.17.0", features = ["v4"] }

[[bin]]
name = "metamuse-api"
path = "src/main.rs"

[[bin]]
name = "ai-worker"
path = "src/ai_worker.rs"
